--- a/web/themes/dedrone/css/main.css
+++ b/web/themes/dedrone/css/main.css
@@ -1,3 +1,7 @@
-.is-active {
-    font-size: 20px;
+.node__content {
+  width: 100%;
+  height: 610px;
+  background-image: url("images/picture.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
