Updated header styles

--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -8,7 +8,7 @@
 @import 'base/global';
 
 // Import Components
-// @import 'components/header';
+@import 'blocks/header';
 
 // Import Layouts
 // @import 'layouts/home';
