--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -6852,8 +6852,38 @@ th {
   padding: 0; }
 
 body {
-  background-color: #ffff;
+  background-color: #fff;
   font-size: 14px;
   font-weight: 400;
   font-family: "Roboto", sans-serif;
   color: #818181; }
+
+.header {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background: #FFF;
+  box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.2); }
+  .header__logo-link {
+    display: block;
+    width: 135px;
+    height: 28px; }
+    .header__logo-link img {
+      display: block;
+      width: 100%; }
+
+.main-menu > li {
+  float: left;
+  margin-left: 30px;
+  padding: 0; }
+  .main-menu > li:first-child {
+    margin-left: 0px; }
+  .main-menu > li:last-child > a {
+    color: #e5310e; }
+  .main-menu > li > a {
+    display: block;
+    padding: 5px 0 4px 0;
+    font-size: 13px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #111; }
