--- a/web/themes/dedrone/templates/block/block--dedrone-branding.html.twig
+++ b/web/themes/dedrone/templates/block/block--dedrone-branding.html.twig
@@ -14,23 +14,11 @@
  */
 #}
 
-{% set attributes = attributes.addClass('site-branding') %}
+{% set attributes = attributes.addClass('site-branding float-left header__logo') %}
 {% block content %}
   {% if site_logo %}
-    <a href="{{ path('<front>') }}" title="{{ 'Home CUSTOM TEST'|t }}" rel="home" class="site-branding__logo">
+    <a href="{{ path('<front>') }}" title="{{ 'Home CUSTOM TEST'|t }}" rel="home" class="header__logo-link">
       <img src="{{ site_logo }}" alt="{{ 'Home CUSTOM TEST'|t }}" />
     </a>
-  {% endif %}
-  {% if site_name or site_slogan %}
-    <div class="site-branding__text">
-      {% if site_name %}
-        <div class="site-branding__name">
-          <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">{{ site_name }}</a>
-        </div>
-      {% endif %}
-      {% if site_slogan %}
-        <div class="site-branding__slogan">{{ site_slogan }}</div>
-      {% endif %}
-    </div>
   {% endif %}
 {% endblock %}
