--- a/web/themes/dedrone/templates/paragraph/paragraph--image-and-description-simple.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--image-and-description-simple.html.twig
@@ -41,6 +41,7 @@
 
 {%
   set classes = [
+    'paragraph-column',
     'paragraph',
     'paragraph--type--' ~ paragraph.bundle|clean_class,
     view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
