--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -9,6 +9,8 @@
 
 // Import Components
 @import 'blocks/header';
+@import 'blocks/_footer_menu';
+@import 'blocks/_footer';
 
 // Import Layouts
 // @import 'layouts/home';
@@ -16,5 +18,4 @@
 // Import Plugins
 // @import 'plugins/plugin';
 
-//Blocks
-@import 'blocks/_footer_menu';
+
