Added coments and fix some scss style

--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -6888,16 +6888,22 @@ body {
     text-transform: uppercase;
     color: #111; }
 
+/* ==========================================================================
+   Footer menu region style sheets.
+   ========================================================================== */
 .footerMenu {
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  font-family: 'Roboto',sans-serif; }
+  /*Bootstrap menu container*/ }
   .footerMenu .container {
+    /* Menu container positioning and style*/
     padding-top: 75px;
     padding-bottom: 75px;
     border-bottom: 1px solid #ddd;
-    margin-bottom: 45px; }
+    margin-bottom: 45px;
+    /*Menus title positioning and style*/
+    /*Menus items positioning and style*/
+    /*Menus positioning and style*/
+    /*Menus elements positioning*/
+    /*Menus elements positioning and ":hover" style*/ }
     .footerMenu .container h2 {
       margin-top: 50px;
       color: #111;
@@ -6905,41 +6911,47 @@ body {
       font-weight: 700;
       text-align: left;
       text-transform: uppercase;
-      letter-spacing: 0.05em; }
+      letter-spacing: 0.1em; }
     .footerMenu .container a {
       color: #111;
-      clear: left;
       display: block;
       text-align: left;
       font: normal normal 300 normal 16px / 23px 'Roboto', sans-serif;
-      padding: 0px 0px;
       text-decoration: none; }
       .footerMenu .container a:hover {
         color: #009ee3; }
     .footerMenu .container ul.menu {
       color: #111;
-      margin: 0;
-      list-style-type: none;
-      padding-start: 0; }
+      margin: 0; }
     .footerMenu .container li {
       padding-top: 10px; }
-    .footerMenu .container .social-media-links--platforms a:hover {
-      color: #818181; }
-    .footerMenu .container .social-media-links--platforms ul {
+    .footerMenu .container ul.social-media-links--platforms {
+      display: block;
       margin-top: 25px; }
+      .footerMenu .container ul.social-media-links--platforms a:hover {
+        color: #818181; }
 
-.footer nav.block-menu {
-  margin-left: auto;
-  margin-right: 5em; }
-  .footer nav.block-menu ul, .footer nav.block-menu li, .footer nav.block-menu h2 {
-    display: inline-block; }
-  .footer nav.block-menu h2, .footer nav.block-menu a {
-    letter-spacing: 0.05em;
-    color: #111;
-    line-height: 13px;
-    font: normal normal 300 normal 13px 'Roboto', sans-serif; }
-  .footer nav.block-menu a {
-    border-left: 1px solid #808080;
-    padding-left: 15px;
-    padding-right: 15px;
-    text-decoration: none; }
+/* ==========================================================================
+   Footer region style sheets.
+   ========================================================================== */
+.footer {
+  /*Copyright menu.*/ }
+  .footer nav.block-menu {
+    /* Menu positioning */
+    margin-left: auto;
+    margin-right: 5em;
+    /*Move menu to the horizontal position.*/
+    /*Font style for menu*/
+    /* Menu elements positioning */ }
+    .footer nav.block-menu ul, .footer nav.block-menu li, .footer nav.block-menu h2 {
+      display: inline-block; }
+    .footer nav.block-menu h2, .footer nav.block-menu a {
+      letter-spacing: 0.05em;
+      color: #111;
+      line-height: 13px;
+      font: normal normal 300 normal 13px 'Roboto', sans-serif;
+      text-decoration: none; }
+    .footer nav.block-menu a {
+      border-left: 1px solid #808080;
+      padding-left: 15px;
+      padding-right: 15px; }
