--- a/web/themes/dedrone/scss/blocks/_footer_menu.scss
+++ b/web/themes/dedrone/scss/blocks/_footer_menu.scss
@@ -1,16 +1,19 @@
+/* ==========================================================================
+   Footer menu region style sheets.
+   ========================================================================== */
+
 .footerMenu
 {
-    display: flex;
-    width: 100%;
-    font-family: 'Roboto',sans-serif;
-   
+    /*Bootstrap menu container*/
     .container
     {
+        /* Menu container positioning and style*/
         padding-top: 75px;
         padding-bottom: 75px;
         border-bottom: 1px solid #ddd;
         margin-bottom: 45px;
 
+        /*Menus title positioning and style*/
         h2
         {
             margin-top: 50px;
@@ -19,17 +22,16 @@
             font-weight: 700;
             text-align: left;
             text-transform: uppercase;
-            letter-spacing: 0.05em;
+            letter-spacing: 0.1em;
         }
 
+        /*Menus items positioning and style*/
         a
         {
             color: #111;
-            clear: left;
             display: block;
             text-align: left;
             font: normal normal 300 normal 16px / 23px 'Roboto', sans-serif;
-            padding: 0px 0px;
             text-decoration: none;
             &:hover 
             {   
@@ -38,28 +40,27 @@
 
         }
 
+        /*Menus positioning and style*/
         ul.menu
         {
             color: #111;
             margin: 0;
-            list-style-type: none;
-            padding-start: 0;
         }
 
+        /*Menus elements positioning*/
         li
         {
             padding-top: 10px;     
         }
 
-        .social-media-links--platforms 
+        /*Menus elements positioning and ":hover" style*/
+        ul.social-media-links--platforms
         {
+            display: block;
+            margin-top: 25px;
             a:hover
             {
                 color: #818181;
-            }
-            ul
-            {
-                margin-top: 25px;
             }
         }
     }
