--- a/web/themes/dedrone/templates/region--footer.html.twig
+++ b/web/themes/dedrone/templates/region--footer.html.twig
@@ -1,3 +1,8 @@
+{# This is a twig template for footer region
+ - This region is used Bootstrap for 
+ - Stylesheets for this region: <theme folder>/scss/_footer_menu.scss
+#}
+
 {%
   set classes = [
     'footer',
