Added title paragraph

--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -11,6 +11,8 @@
 @import 'blocks/header';
 @import 'blocks/_footer_menu';
 @import 'blocks/_footer';
+@import 'paragraph/_technology_partners';
+@import 'paragraph/_shared';
 
 // Import Layouts
 // @import 'layouts/home';
