--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -6955,3 +6955,30 @@ body {
       border-left: 1px solid #808080;
       padding-left: 15px;
       padding-right: 15px; }
+
+.field--name-field-shared-h1-white-title {
+  font-size: 40px;
+  line-height: 45px;
+  letter-spacing: 0;
+  color: #fff;
+  text-align: center;
+  font-weight: 200; }
+
+.field--name-field-shared-h2-white-title-desc {
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 300;
+  margin-top: 20px;
+  margin-bottom: 10px; }
+
+#headerwrap {
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 550px;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 21%, rgba(18, 18, 18, 0)), url(../images/technology-partners-title-background.jpg) no-repeat center top;
+  background-attachment: relative;
+  background-position: center center;
+  width: 100%;
+  background-size: cover; }
