--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -6956,29 +6956,115 @@ body {
       padding-left: 15px;
       padding-right: 15px; }
 
-.field--name-field-shared-h1-white-title {
+.paragraph--type--shared-simple-white-title- #tech-par-title-background {
+  min-height: 550px;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 21%, rgba(18, 18, 18, 0)), url(../images/technology-partners-title-background.jpg) no-repeat center top; }
+
+.paragraph--type--bundle-description-tech-par-page {
+  padding-top: 150px;
+  padding-bottom: 150px; }
+  .paragraph--type--bundle-description-tech-par-page .shared_h1_title, .paragraph--type--bundle-description-tech-par-page .shared_h1_white_title {
+    margin-bottom: 40px; }
+
+.paragraph--type--bundle-content-tech-par-page .bundle_partner_logo {
+  display: -ms-flexbox;
+  display: flex;
+  width: 160px;
+  height: 100%; }
+
+.paragraph--type--bundle-content-tech-par-page .bundle_partner_logo img {
+  width: 160px;
+  height: auto; }
+
+.paragraph--type--bundle-content-tech-par-page .row {
+  margin: 60px 0 40px;
+  padding: 40px 11px 11px;
+  border-top: 1px solid #426270; }
+
+/* ==========================================================================
+   Shared site styles 
+   ========================================================================== */
+/* Text styles
+   ========================================================================== */
+.shared_h1_title, .shared_h1_white_title {
   font-size: 40px;
   line-height: 45px;
   letter-spacing: 0;
-  color: #fff;
-  text-align: center;
+  color: #111;
   font-weight: 200; }
 
-.field--name-field-shared-h2-white-title-desc {
+.shared_h1_white_title {
   color: #fff;
-  text-align: center;
+  text-align: center; }
+
+.shared_h2_title, .shared_h2_white_title_desc {
   font-size: 20px;
   line-height: 24px;
-  font-weight: 300;
-  margin-top: 20px;
-  margin-bottom: 10px; }
+  color: #111;
+  font-weight: 300; }
 
-#headerwrap {
+.shared_h2_white_title_desc {
+  color: #fff;
+  text-align: center; }
+
+.shared_p_simple_text, .shared_link_label a {
+  float: none;
+  clear: none;
+  color: #111;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: left;
+  display: inline-block; }
+
+.shared_link_label a {
+  font-weight: 400;
+  color: #009ee3; }
+
+/* Paragraphs background styles
+   ========================================================================== */
+#full_width_background, .paragraph--type--shared-simple-white-title- #tech-par-title-background, #aditional_inf_background {
   display: -ms-flexbox;
   display: flex;
-  min-height: 550px;
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 21%, rgba(18, 18, 18, 0)), url(../images/technology-partners-title-background.jpg) no-repeat center top;
   background-attachment: relative;
   background-position: center center;
   width: 100%;
   background-size: cover; }
+
+#aditional_inf_background {
+  background: #f05c40 no-repeat center top; }
+
+/* Buttons style
+   ========================================================================== */
+.shared_white_btn {
+  display: inline-block;
+  min-width: 220px;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  padding: 15px 50px;
+  border-radius: 4px;
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 400; }
+
+.shared_white_btn:hover {
+  color: #f05c40; }
+
+.shared_adit_inf_btns {
+  margin-top: 25px; }
+
+/* Shared paragraphs styles
+   ========================================================================== */
+.paragraph--type--shared-simple-white-title- .shared_h1_white_title {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-top: 5px; }
+
+.paragraph--type--shared-simple-white-title- .shared_h2_white_title_desc {
+  margin-top: 20px;
+  margin-bottom: 10px; }
+
+.paragraph--type--shared-aditional-information .container {
+  padding-top: 150px;
+  padding-bottom: 150px; }
