--- a/web/themes/dedrone/scss/paragraph/_technology_partners.scss
+++ b/web/themes/dedrone/scss/paragraph/_technology_partners.scss
@@ -1,3 +1,11 @@
+/* ==========================================================================
+   Page "Technology Partners" styles
+   - positioning options and unique page styles.
+   - other page styles defined in _shared.scss.
+   ========================================================================== */
+
+
+/*Title paragraph*/
 .paragraph--type--shared-simple-white-title-
 {
 	#tech-par-title-background
@@ -8,16 +16,17 @@
 	}
 }
 
+/*Page description paragraph*/
 .paragraph--type--bundle-description-tech-par-page 
 {
 	padding-top:150px;
-	padding-bottom:150px;
 	.shared_h1_title
 	{
 		margin-bottom: 40px;
 	}
 }
 
+/*Main content paragraph*/
 .paragraph--type--bundle-content-tech-par-page
 {
 	.bundle_partner_logo
@@ -37,4 +46,10 @@
 		padding: 40px 11px 11px;
 	    border-top: 1px solid #426270;
     }
+}
+
+/*Additional information paragraph*/
+.paragraph--type--shared-aditional-information
+{
+
 }
