--- a/web/themes/dedrone/scss/paragraph/_technology_partners.scss
+++ b/web/themes/dedrone/scss/paragraph/_technology_partners.scss
@@ -4,7 +4,6 @@
    - other page styles defined in _shared.scss.
    ========================================================================== */
 
-
 /*Title paragraph*/
 .paragraph--type--shared-simple-white-title-
 {
@@ -20,7 +19,7 @@
 .paragraph--type--bundle-description-tech-par-page 
 {
 	padding-top:150px;
-	.shared_h1_title
+	.h1
 	{
 		margin-bottom: 40px;
 	}
