--- a/web/themes/dedrone/templates/paragraph/paragraph--bundle-description-tech-par-page.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--bundle-description-tech-par-page.html.twig
@@ -51,16 +51,16 @@
     {% block content %}
           <div class = "container">
             <div class = "row justify-content-center">
-                <div class="col-12 shared_h1_title">
-                  {{ content.field_shared_h1_title }}
+                <div class="col-12">
+                  <h1>{{ content.field_shared_h1_title }}</h1>
                 </div>
-                <div class="col-6 shared_p_simple_text">
+                <div class="col-6">
                   {{ content.field_shared_p_simple_text[0] }}
                 </div>
-                <div class="col-6 shared_p_simple_text">
+                <div class="col-6">
                   {{ content.field_shared_p_simple_text[1] }}
                 </div>
-                <div class="col-12 shared_link_label">
+                <div class="col-12">
                   {{ content.field_shared_link_label }}
                 </div>
             </div>
