--- a/web/themes/dedrone/templates/paragraph/paragraph--shared-simple-white-title-.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--shared-simple-white-title-.html.twig
@@ -52,16 +52,16 @@
       <div id = "tech-par-title-background" class = "align-items-center">
           <div class = "container">
             <div class = "row justify-content-center">
-                <div class="col-6">
-                  <div class="shared_h1_white_title">
+                <div class="col-6 text-center">
+                  <h1>
                    {{ content.field_shared_h1_white_title }}
-                  </div>
-                  <div class="shared_h2_white_title_desc">
+                  </h1>
+                  <h2>
                    {{ content.field_shared_h2_white_title_desc }}
-                  </div>
+                  </h2>
                 </div>
             </div>
-        </div>
+          </div>
       </div>
     {% endblock %}
   </div>
