--- a/web/themes/dedrone/scss/base/_typography.scss
+++ b/web/themes/dedrone/scss/base/_typography.scss
@@ -1,3 +1,31 @@
 // typography go here
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,700,800,900');
 
+
+h1{
+	font-size: 40px;
+    line-height: 45px;
+    letter-spacing: 0;
+    font-weight: 300;
+    color: #111;
+}
+
+h2{
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0;
+    font-weight: 300;
+    color: #111;
+}
+
+p
+{
+    font-size: 16px;
+    line-height: 24px;
+    color: #111;
+}
+
+a{
+    font-weight: 400;
+    color: #009ee3;
+}
