--- a/web/themes/dedrone/templates/paragraph/paragraph--shared-aditional-information.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--shared-aditional-information.html.twig
@@ -52,8 +52,8 @@
       <div id = "aditional_inf_background" class = "align-items-center">
           <div class = "container">
             <div class = "row justify-content-center">
-                  <div class="shared_h1_white_title col-12">
-                   {{ content.field_shared_h1_white_title }}
+                  <div class="col-12">
+                   <h1>{{ content.field_shared_h1_white_title }}</h1>
                   </div>
                   <div class="shared_adit_inf_btns co1-12">
                     <button type="button" class="btn btn-outline-light shared_white_btn">FREE WEBINAR</button>
