--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -6,6 +6,7 @@
 @import 'base/normalize';
 @import 'base/typography.scss';
 @import 'base/global';
+@import 'base/secondary-custimers-block-img-text';
 
 // Import Components
 @import 'blocks/header';
